# lingua-bridge

./: .env.example  .gitignore  AI-Disclosure.md  AKASH.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  DISCORD.md  README.md  TEST.md  TODO  admin.pub  deploy.yaml  gpus.json  justfile
admin-cli/: Cargo.toml  README.md
admin-cli/src/: main.rs
admin-cli/src/tui/: app.rs  event.rs  gpu.rs  input.rs  mod.rs  sdl.rs  theme.rs  ui.rs
admin-cli/src/tui/api/: client.rs  mod.rs  provider.rs
admin-cli/src/tui/config/: mod.rs  schema.rs  store.rs
admin-cli/src/tui/screens/: bids.rs  deployment.rs  deployments.rs  discord_config.rs  fee_grant.rs  leases.rs  mod.rs  splash.rs  wallet.rs
admin-cli/src/tui/wallet/: keygen.rs  mod.rs  signer.rs
admin-cli/src/tui/widgets/: form.rs  log_viewer.rs  mod.rs  popup.rs  spinner.rs
config/: default.toml
docker/: Dockerfile.inference  Dockerfile.rust  Dockerfile.unified  Dockerfile.voice  docker-compose.yml
docs/: MODELS.md  PIPELINE.md  TODO.md  TTS.md  VOICE-CHANNEL-WEB-VIEWS-SPEC.md  voice-inference-pipeline.md
inference/: detector.py  main.py  requirements.txt  translator.py  unified_inference.py  voice_protocol.py  voice_service.py
inference/voice/: __init__.py  stt.py  tts.py
linguabridge-types/: Cargo.toml
linguabridge-types/src/: lib.rs
scripts/: configure-deploy.sh  release.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/admin/: crypto.rs  mod.rs  secrets.rs  transport.rs
src/bot/: handler.rs  mod.rs
src/bot/commands/: mod.rs  mylang.rs  setup.rs  translate.rs  voice.rs  webview.rs
src/db/: mod.rs  models.rs  queries.rs
src/translation/: cache.rs  client.rs  language.rs  mod.rs
src/types/: mod.rs
src/types/lingua/: mod.rs
src/voice/: bridge.rs  buffer.rs  cache.rs  client.rs  handler.rs  mod.rs  playback.rs  types.rs
src/web/: broadcast.rs  mod.rs  routes.rs  voice_routes.rs  websocket.rs
static/: index.html
static/css/: common.css  voice_view.css  web_view.css
static/js/: voice_view.js  web_view.js  websocket.js
templates/: voice_view.html  web_view.html
tests/: integration_voice_protocol.rs
tests/e2e/: .coverage  .coveragerc  Makefile  README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_tests.py  test.sh  test_cache_performance.py  test_protocol.py  test_protocol_errors.py  test_voice_protocol.py  voice_protocol.py
tests/e2e/discord/: __init__.py  test_text_translation.py  test_voice_channel.py
tests/e2e/discord_tests/: test_user_preferences.py  test_voice_channel.py
tests/e2e/fixtures/: __init__.py  testdata.json  translation_scenarios.json
tests/e2e/mocks/: __init__.py  text_inference_mock.py  voice_inference_mock.py  web_server_mock.py
tests/e2e/web/: __init__.py  test_voice_webview.py
tools/discord-bot-tester/: .env.example  .gitignore  README.md  bot_tester.py
