
[package]
name = "linguabridge"
version = "0.1.0"
edition = "2021"
description = "Multilingual Discord Translation Bot using TranslateGemma"
authors = ["LinguaBridge Team"]
license = "MIT"
[workspace]
members = [".", "admin-cli", "linguabridge-types"]
resolver = "2"

[dependencies]
anyhow = "1.0"
linguabridge-types = { path = "linguabridge-types" }

# Template rendering (optional, for simple HTML)
askama = "0.12"
askama_axum = "0.4"
async-trait = "0.1"

# Web server
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dashmap = "6.1"
dotenvy = "0.15"

# Cryptography for secure admin transport
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures = "0.3"

# LRU cache for voice transcription deduplication
lru = "0.12"
# Blake3 hashing for audio cache keys (fast, modern)
blake3 = "1.5"

# OAuth2 for Discord web auth
oauth2 = "4.4"
once_cell = "1.20"
poise = "0.6"
rand = "0.8"
prost = { version = "0.14.1", default-features = false, features = ["derive"] }
pbjson-types                     = { version = "0.8.0" }

# HTTP client for inference service
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Discord bot
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache", "framework", "voice"] }

# Discord voice
songbird = { version = "0.4", features = ["driver", "receive", "gateway"] }

# Audio processing
rubato = "0.15"
audiopus = "0.2.0"

# WebSocket client for voice inference
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
bytes = "1.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate", "chrono", "uuid"] }
thiserror = "2.0"
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
