[package]
name = "admin-cli"
version = "0.1.0"
edition = "2021"
description = "Admin CLI for LinguaBridge - secure provisioning tool"
authors = ["LinguaBridge Team"]
license = "MIT"

[[bin]]
name = "linguabridge-admin"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography (same as main crate)
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8", "pem"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1.8", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Terminal colors
colored = "2.1"
