[package]
name = "linguabridge-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
cosmrs = { version = "0.20", features = ["bip32"] }
bip39 = { version = "2.2.2" }
tonic = { version = "0.14.2", features = ["transport", "tls", "tls-webpki-roots"] }
prost = { version = "0.14.1", default-features = false, features = ["derive"] }
linguabridge-types = { path = "../linguabridge-types", features = ["rpc"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
dirs = "5.0"
rpassword = "5.0"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for Akash LCD/REST and provider APIs
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
arboard = "3.4"
serde_yaml = "0.9"
