[package]
name = "linguabridge-types"
version = "0.1.0"
edition = "2021"
description = "Protobuf-generated types for Akash Network and Cosmos SDK"
authors = ["LinguaBridge Team"]
license = "MIT"

[dependencies]
prost = { version = "0.14.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
pbjson-types = { version = "0.8.0" }
