[package]
name = "linguabridge-types"
version = "0.1.0"
edition = "2021"
description = "Protobuf-generated types for Akash Network and Cosmos SDK"
authors = ["LinguaBridge Team"]
license = "MIT"

[features]
default = ["rpc"]
rpc = ["tonic","tonic-prost"]

[dependencies]
tonic-prost = { version = "0.14.1", optional = true, default-features = false }
prost = { version = "0.14.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
pbjson-types = { version = "0.8.0" }
tonic = { version = "0.14.1", optional = true }
